engine-net-2/examples/Errors/FilterParameterError.grs
new graph "Rules.grg"

eval [?t\keepFirst("lol")]

quit
